versions/5.3.0/source/index.rst
.. This page should present an overview of the whole documentation, with a TOC
   as well as a main table that lists the most important stuff about the project

AwesomeAds Android SDK
======================

The AwesomeAds Android SDK (Software Development Kit) lets you to easily add COPPA compliant advertisements to your apps.

=============== ========
Info            Contents
=============== ========
Version         <sdk_version> (`Changelog <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-android/blob/master/CHANGELOG.md>`_)
Support         <sdk_min>
GitHub          <sdk_source>
Contact         `<sdk_devsuspport> <mailto:<sdk_devsuspport>>`_
License         `GNU General Public License Version 3 <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-android/blob/master/LICENSE>`_
=============== ========

Table of Contents:

.. toctree::
   :maxdepth: 2

   Initial setup <01dashboard>
   Add the SDK through Gradle <02addgradle>
   Add the SDK as a JAR library <03addjar>
   Banner Ads <04banner>
   Interstitial Ads <05interstitial>
   Video Ads <06video>
	 Game Wall <07gamewall>
   Ad callbacks <08callbacks>
   Handle CPI <09cpi>
   Integrate with MoPub <10mopub>
   Examples <11examples>
