versions/5.4.8/source/index.rst
.. This page should present an overview of the whole documentation, with a TOC
   as well as a main table that lists the most important stuff about the project

AwesomeAds Android SDK
======================

The AwesomeAds Android SDK (Software Development Kit) lets you to easily add COPPA compliant advertisements to your apps.

=============== ========
Info            Contents
=============== ========
Version         <sdk_version> (`Changelog <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-android/blob/master/CHANGELOG.md>`_)
Support         <sdk_min>
GitHub          <sdk_source>
Contact         `<sdk_devsuspport> <mailto:<sdk_devsuspport>>`_
License         `GNU General Public License Version 3 <https://github.com/SuperAwesomeLTD/sa-mobile-sdk-android/blob/master/LICENSE>`_
=============== ========

AwesomeAds Demo App
-------------------

Check out the new AwesomeAds Demo App, now available on the Play Store.
It lets you preview and troubleshoot all mobile ads on the AwesomeAds platform, on the go!

+-----------------------------+-----------------------------+-----------------------------+-----------------------------+
| .. image:: img/appscr1.jpeg | .. image:: img/appscr2.jpeg | .. image:: img/appscr3.jpeg | .. image:: img/appscr4.jpeg |
|   :width: 100px             |   :width: 100px             |   :width: 100px             |   :width: 100px             |
|   :height: 178px            |   :height: 178px            |   :height: 178px            |   :height: 178px            |
+-----------------------------+-----------------------------+-----------------------------+-----------------------------+

.. image:: img/appstore.png
  :target: https://play.google.com/store/apps/details?id=aademo.superawesome.tv.awesomeadsdemo

Table of Contents
-----------------

.. toctree::
   :maxdepth: 2

   Initial setup <01dashboard>
   Add the SDK through Gradle <02addgradle>
   Add the SDK as a JAR library <03addjar>
   Banner Ads <04banner>
   Interstitial Ads <05interstitial>
   Video Ads <06video>
   App Wall <07appwall>
   Ad callbacks <08callbacks>
   Handle CPI <09cpi>
   Integrate with MoPub <10mopub>
   Examples <11examples>
